# qxy-modules

./: .gitmodules  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/cmake/: WarningFlags.cmake
modules/qxy_juce/: qxy_juce.h
modules/qxy_juce/juce/: qxy_Juce.hpp
modules/qxy_math/: qxy_math.h
modules/qxy_math/math/: qxy_Math.hpp  qxy_TransitionFunctions.hpp
modules/qxy_param/: qxy_param.h
modules/qxy_param/core/: qxy_ParameterCore.hpp
modules/qxy_processors/: qxy_processors.h
modules/qxy_processors/processors/: qxy_AmplitudeSplitter.hpp  qxy_EnvelopeFilter.hpp  qxy_EnvelopeFollower.hpp  qxy_MixerProcessor.hpp  qxy_PitchTracker.hpp
modules/qxy_simd/: qxy_simd.cpp  qxy_simd.h  qxy_simd.hpp
modules/qxy_simd/simd/: qxy_Simd.hpp
modules/qxy_utility/: qxy_utility.h
modules/qxy_utility/utility/: qxy_AudioBlock.hpp
scripts/: format-all.sh
